# llm-observability-talk

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
data/: .gitignore
src/: create_movie_table.py  embeddings.py  model_interaction.py  paths.py  rag.py  run_rag_query.py  run_rag_query_with_langfuse.py  run_rag_query_with_phoenix.py  scores.py
